<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        android:stretchColumns="*"
        tools:ignore="UselessParent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tvTableLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:padding="8dp"
                android:text="@string/connexion"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <EditText
                android:id="@+id/edUsername"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_weight="3"
                android:autofillHints=""
                android:hint="@string/username_input"
                android:inputType="text"
                tools:ignore="LabelFor,TextFields" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_weight="3"
                android:autofillHints=""
                android:hint="@string/mot_de_passe"
                android:inputType="textPassword"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/btLogin"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/connexion_process"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btCancel"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_input"
                android:textColor="#000000" />
        </TableRow>
    </TableLayout>
</RelativeLayout>